font awesome icons added

--- a/src/css/components/aboutMe.scss
+++ b/src/css/components/aboutMe.scss
@@ -1,22 +1,99 @@
 .about-me-logo {
-  background-image: url(../../img/IMG_20210925_031223.jpg);
+  background-image: url(../../img/IMG_20210522_184901.jpg);
+  height: 100vh;
+  //   -o-background-size: cover;
   background-size: cover;
-  width: 70vh;
-  height: 70vh;
+  background-position: center center;
+  box-shadow: -1px 0px 6px 4px rgb(0 0 0 / 10%);
+  border: solid 10px #ffffff;
 }
 
 .about-me-description {
-    .about-me-icons {
-        display: flex;
-        gap: 10px;
-        .fa {
-            background-color: chartreuse;
-            height: 20px;
-            width: 20px;
-            padding:20px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-    }
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  .about-me-icons {
+    display: flex;
+  }
+  button {
+    width: 130px;
+    height: 30px;
+  }
+}
+
+// icons 
+
+.wrapper .icon {
+  position: relative;
+  background-color: #ffffff;
+  border-radius: 50%;
+  padding: 15px;
+  margin: 10px;
+  width: 45px;
+  height: 45px;
+  font-size: 18px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  transition: all 0.2s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.wrapper .tooltip {
+  position: absolute;
+  top: 0;
+  font-size: 14px;
+  background-color: #ffffff;
+  color: #ffffff;
+  padding: 5px 8px;
+  border-radius: 5px;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.wrapper .tooltip::before {
+  position: absolute;
+  content: "";
+  height: 8px;
+  width: 8px;
+  background-color: #ffffff;
+  bottom: -3px;
+  left: 50%;
+  transform: translate(-50%) rotate(45deg);
+  transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+.wrapper .icon:hover .tooltip {
+  top: -45px;
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+.wrapper .icon:hover span,
+.wrapper .icon:hover .tooltip {
+  text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.1);
+}
+// github hover
+.wrapper .github:hover,
+.wrapper .github:hover .tooltip,
+.wrapper .github:hover .tooltip::before {
+  background-color: #333333;
+  color: #ffffff;
+}
+// instagram hover
+.wrapper .instagram:hover,
+.wrapper .instagram:hover .tooltip,
+.wrapper .instagram:hover .tooltip::before {
+    background-color: #e1306c;
+    color: #ffffff;
+}
+// linkedin hover
+.wrapper .linkedin:hover,
+.wrapper .linkedin:hover .tooltip,
+.wrapper .linkedin:hover .tooltip::before {
+  background-color: #0a66c2;
+  color: #ffffff;
 }
