--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -2,6 +2,7 @@
 @import "./components/header.scss";
 @import "./components/aboutMe.scss";
 @import "./3rd-party/font-awesome.min.css";
+@import "./components/hero.scss";
 
 body {
   background-color: antiquewhite;
