--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -3,6 +3,9 @@
 @import "./components/aboutMe.scss";
 @import "./3rd-party/font-awesome.min.css";
 @import "./components/hero.scss";
+@import "./components/services.scss";
+@import "./base/base.css";
+@import "./components/hireMe.scss";
 
 body {
   background-color: antiquewhite;
